# dcmiodlang

./: CMakeLists.txt  README
apps/: CMakeLists.txt  iodc.cc
data/iods/: config.iodl  identity_pixel_value_transformation_fg.iodl  parametric_map.iodl  parametric_map_frame_type_fg.iodl  parametric_map_image_module.iodl  parametric_map_series_module.iodl
data/skeleton/: functional_group_header.iodskel  functional_group_source.iodskel  iod_header.iodskel  iod_source.iodskel  module_header.iodskel  module_source.iodskel
data/xslt/: README  extract-attribute-set.xslt  extract-iod.xslt  make_dictionary.xslt
include/iodl/: status.hpp
include/iodl/ast/: attribute.hpp  attribute_set.hpp  files.hpp  iod.hpp  iodl.hpp  value_multiplicity.hpp  value_set_constraint.hpp
include/iodl/generator/: attribute.hpp  attribute_set.hpp  comparable.hpp  component.hpp  container.hpp  context.hpp  expression.hpp  iod.hpp  string.hpp  value_multiplicity.hpp  value_representation.hpp
include/iodl/parser/: iodl.hpp  next_token.hpp  skeleton.hpp
include/iodl/skeleton/: block.hpp  for_loop.hpp  if_statement.hpp  reference.hpp  (+5 more)
libsrc/: CMakeLists.txt  status.cc
libsrc/ast/: CMakeLists.txt  attribute.cc  iod.cc
libsrc/generator/: CMakeLists.txt  attribute.cc  attribute_set.cc  component.cc  context.cc  expression.cc  iod.cc  string.cc  value_multiplicity.cc  value_representation.cc
libsrc/parser/: CMakeLists.txt  iodl.cc  skeleton.cc
libsrc/skeleton/: CMakeLists.txt  block.cc  for_loop.cc  if_statement.cc  manipulator.cc  reference.cc  statement.cc  text.cc  value_multiplicity.cc
(+12 files in other folders)
